@@ -543,6 +543,9 @@ namespace {
 
 int main(int argc, char**argv)
 {
+#ifdef SVNREV
+	game_config::svnrev = get_svn_revision();
+#endif
 	lg::timestamps(true);
 	try {
 		printf("argc %d argv[0] %s 1 %s\n",argc,argv[0],argv[1]);
