@@ -2328,6 +2328,9 @@ int main(int argc, char** argv)
 #endif
 
 	try {
+#ifdef SVNREV
+		game_config::svnrev = get_svn_revision();
+#endif
 		const std::string rev = game_config::svnrev.empty() ? "" :
 			" (" + game_config::svnrev + ")";
 
