@@ -1,0 +1,18 @@
+/*
+   Copyright (C) 2003 - 2008 by David White <dave@whitevine.net>
+   Part of the Battle for Wesnoth Project http://www.wesnoth.org/
+
+   This program is free software; you can redistribute it and/or modify
+   it under the terms of the GNU General Public License version 2
+   or at your option any later version.
+   This program is distributed in the hope that it will be useful,
+   but WITHOUT ANY WARRANTY.
+
+   See the COPYING file for more details.
+*/
+
+#ifndef REVISON_STAMP_HPP_INCLUDE
+#define REVISON_STAMP_HPP_INCLUDE
+#include <string>
+const std::string& get_svn_revision();
+#endif
