@@ -1,0 +1,20 @@
+/*
+   Copyright (C) 2003 - 2008 by David White <dave@whitevine.net>
+   Part of the Battle for Wesnoth Project http://www.wesnoth.org/
+
+   This program is free software; you can redistribute it and/or modify
+   it under the terms of the GNU General Public License version 2
+   or at your option any later version.
+   This program is distributed in the hope that it will be useful,
+   but WITHOUT ANY WARRANTY.
+
+   See the COPYING file for more details.
+*/
+
+#include "revision_stamp.hpp"
+
+const std::string& get_svn_revision()
+{
+	static const std::string revision = "SVN_REVISION";
+	return revision;
+}
